<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Mobilis</string>
    <string name="logo_description">Imagem do logo do solar</string>
    <string name="login_greeting_text">Ambiente Móvel do Solar</string>
    <string name="login_field_text">LOGIN</string>
    <string name="password_field_text">SENHA</string>
    <string name="courses_title">Cursos disponíveis</string>
    <string name="curriculum_units_title">Turmas disponíveis</string>
    <string name="answer_topic_submit_text">Enviar</string>
    <string name="answer_topic_edittext_hint">Corpo da Mensagem</string>
    <string name="recod_button_description">Botão de gravação</string>
    <string name="counter_default_value">00:00</string>
    <string name="char_count_default_value">0</string>
    <string name="post_list_forum_name_placeholder">Nome do Forum</string>
    <string name="stock_person_description">Imagem default do usuário</string>
    <string name="empty_forum_message">Fórum Vazio</string>
    <string name="topics_title">Forums disponíveis</string>
    <string name="new_topic_image_description">Imagem de Responder forum geral</string>
    <string name="temp_description">to delete</string>
    <string name="discussion_name">Nome do Forum</string>
    <string name="fulano_name">Fulano da Silva Pessoa e Tal</string>
    <string name="sample_text">Teste de post, mas não sei quantos carateres podem caber aqui no entanto vamos ver até quando eu posse escrever, só sei que no final irei só colocar concordo mesmo.</string>
    <string name="not_loaded_posts_count"> postagens</string>
    <string name="not_read_messages"> mensagens não lidas</string>
    <string name="read_messages"> mensagens lidas</string>
    <string name="locale_date_format">dd/MM/yyyy</string>
    <string name="no_new_posts">Não há novos posts</string>
    <string name="error_connection_failed">Erro de conexão. Tente novamente.</string>
    <string name="error_connection_timeout">Tempo limite de conexão atingido.</string>
    <string name="error_connection_refused">Conexão recusada.</string>
    <string name="error_server_down">Servidor Indisponível.</string>
    <string name="error_token_expired">Senha ou Login inválidos.</string>
    <string name="error_unknown">Erro desconhecido.</string>
    <string name="error_page_not_found">Página não encontrada.</string>
    <string name="error_playing">Erro ao Reproduzir o Áudio.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="no_avaliable_course">Nenhum curso disponível</string>
    <string name="recording_date">Data da Gravação</string>
    <string name="recording_duration">duração</string>
    <string name="listen_to">Ouvir</string>
    <string name="image_audio_description">Imagem que indica que um áudio está sendo exibido</string>
    <string name="recording_progress_teste">00:00/00:15</string>
    <string name="button_pause_blue_description">Imagem do botão de pause</string>
    <string name="stop_button_description">Imagem do botão stop</string>
    <string name="divider_line">Linha divisória</string>
    <string name="delete">Deletar</string>
    <string name="warning_image_description">Imagem de alerta</string>
    <string name="no_conection">Sem conexão</string>
    <string name="try_again">Tentar novamente</string>
    <string name="username_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="submit_button_text">Acessar</string>
    <string name="iuvi_footer">Instituto Universidade Virtual - 2012</string>
    <string name="answer_topic_description">Imagem do botão de resposta</string>
    <string name="loading_more_posts">Carregando mais postagens</string>
    <string name="avatar_description">Imagem padrão para quando o usuário não possui foto</string>
    <string name="post_title">Nome</string>
    <string name="x">X</string>
    <string name="record_image_description">Imagem que indica que há gravação de áudio</string>

</resources>