<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/small_space" >

    <!-- android:background="@drawable/picture_post_frame" -->
    <!-- android:scaleType="centerInside" -->

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/temp_description"
        android:src="@drawable/no_picture" />

    <LinearLayout
        android:id="@+id/top_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/user_photo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/user_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/fulano_name"
            android:textColor="@color/text_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/post_date"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/locale_date_format"
            android:textColor="@color/text_white_color"
            android:textSize="12sp" />
    </LinearLayout>

    <com.mobilis.util.EllipsizingTextView
        android:id="@+id/post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_text"
        android:layout_toRightOf="@+id/user_photo"
        android:ellipsize="end"
        android:text="@string/sample_text"
        android:textColor="@color/text_white_color"
        android:textSize="14sp" />

</RelativeLayout>